fix van rebase